[gd_scene load_steps=5 format=3 uid="uid://dgaywdmv07gcq"]

[ext_resource type="Script" path="res://src/prop/Projectile/PlayerBullet/PlayerBullet.gd" id="1_tqt2e"]
[ext_resource type="Material" uid="uid://dsxaibavclsj8" path="res://assets/material/PlayerBulletRight.tres" id="2_8k4t1"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bayiw"]
height = 0.12
radius = 0.22

[sub_resource type="CylinderMesh" id="CylinderMesh_jox3y"]
top_radius = 0.2
bottom_radius = 0.2
height = 0.1

[node name="PlayerBulletRight" type="Area3D"]
collision_layer = 32
collision_mask = 8
script = ExtResource("1_tqt2e")
is_left = false
DAMAGE = 8

[node name="CollisionShape" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_bayiw")

[node name="body" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_jox3y")
surface_material_override/0 = ExtResource("2_8k4t1")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_timeout"]
